added and styled end page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <div class="bg-container">
-    <div id="landing" class="sm-container">
+  <div class="container">
+    <div id="landing" class="container-item">
       <h1>Take the Quiz!</h1>
       <a class="button" href="./game.html">Start Quiz</a>
       <a class="button" href="./highscores.html">High Scores</a>
