added timer to game logic and other misc functionality

--- a/game.html
+++ b/game.html
@@ -17,7 +17,7 @@
         <a href="./highscores.html" class="highscore-link item-text">View High Scores</a>
       </div>
       <div class="header-item">
-        <h1 class="item-text" id="timer">Time Remaining: 0</h1>
+        <h1 class="item-text" id="timer"></h1>
       </div>
 
     </div>
