finished high score page and fixed timer

--- a/endgame.html
+++ b/endgame.html
@@ -26,7 +26,7 @@
             <button class="button" id="save-score" onclick="saveHighScore(event)" disabled>Save Score</button>
           </div>
           <a href="/game.html" class="button">Play Again</a>
-          <a href="./index.html" class="button">View High Scores</a>
+          <a href="./highscores.html" class="button">View High Scores</a>
         </form>
       </div>
     </div>
