--- a/highscores.html
+++ b/highscores.html
@@ -11,7 +11,16 @@
 </head>
 
 <body>
+  <div class="container-secondary">
+    <div id="highScores" class="container-item">
+      <h1 id="finalScore">High Scores</h1>
+      <div class="listEl">
+        <ol id="listOfHighScores"></ol>
+      </div>
+      <a href="./index.html" class="button">Home Page</a>
 
+    </div>
+  </div>
 
 
   <script src="./assets/JS/highscores.js"></script>
